--- a/src/locales/ua/main.json
+++ b/src/locales/ua/main.json
@@ -77,6 +77,33 @@
   "reviews": {
     "title": "Відгуки"
   },
+  "modal": {
+    "title": "Оберіть суму, якою Ви хочете підтримати Baza Trainee Ukraine",
+    "description": "Сума списується одноразово, якщо бажаєте оформити підписку, потрібно ..",
+    "sums": {
+      "100": "100 грн",
+      "200": "200 грн",
+      "500": "500 грн",
+      "1000": "1000 грн",
+      "otherSum": "Інша сума грн"
+    },
+    "button": "Підтримати "
+  },
+  "footer": {
+    "projects": "Проєкти",
+    "partners": "Партнери",
+    "participate": "Взяти участь",
+    "privacyPolicy": "Політика конфіденційності",
+    "rulesForUsingTheSite": "Правила корстування сайтом",
+    "statute": "Статут",
+    "accountability": "Звітність",
+    "allRightsReserved": "Розробка BazaTraineeUkraine 2023 Усі права захищені"
+  },
+  "notFound": {
+    "title": "Цю сторінку не знайдено",
+    "description": "Ми не змогли знайти сторінку, яку Ви шукаєте. Можливо, сталася помилка",
+    "button": "Повернутись на головну"
+  },
   "toFund": "Фондувати",
   "enterKeywordForSearch": "Введіть ключове слово для пошуку"
 }
