--- a/src/locales/ua/main.json
+++ b/src/locales/ua/main.json
@@ -228,10 +228,6 @@
     "title": "Оберіть суму, якою ВИ хочете підтримати Baza Trainee Ukraine",
     "description": "Сума списується одноразово, якщо бажаєте оформити підписку, потрібно ..",
     "sums": {
-      "100": "100 грн",
-      "200": "200 грн",
-      "500": "500 грн",
-      "1000": "1000 грн",
       "otherSum": "Інша сума грн"
     },
     "button": "Підтримати "
@@ -252,5 +248,6 @@
     "button": "Повернутись на головну"
   },
   "toFund": "Фондувати",
+  "currency": "грн",
   "enterKeywordForSearch": "Введіть ключове слово для пошуку"
 }
