fix: changed mock data etc

--- a/src/locales/ua/main.json
+++ b/src/locales/ua/main.json
@@ -35,162 +35,14 @@
       "грудня"
     ]
   },
-  "heroSlider": {
-    "firstSlide": {
-      "title": "Baza Trainee Ukraine",
-      "description": "Громадська організація, яка має на меті отримання першого досвіду роботи тими, хто починає свій шлях в IT"
-    },
-    "secondSlide": {
-      "title": "Наша ціль",
-      "description": "Поєднати в спільній діяльності ці категорії таким чином, щоб користь отримали обидві сторони. Для першої групи – це реальний практичний досвід створення живого проєкту, для другої – цифровий продукт, що працює і сприяє розвитку соціальної ініціативи."
-    },
-    "thirdSlide": {
-      "title": "Про нас",
-      "description": "Ініціатива Baza Trainee Ukraine як освітня і тренувальна платформа виникає у відповідь на суспільний запит, який склався в Україні в 2022-2023 роках в сфері працевлаштування в галузі інформаційних технологій, і представляє собою веб-сайт, що об’єднує як користувачів дві соціальні групи."
-    },
-    "fourthSlide": {
-      "title": "Принцип дії",
-      "description": "Тренувати учасника на основі технологій, якими він володіє на даний момент, і сприяти його працевлаштуванню. Застосовувати при створенні проекту технології, які хоче розвивати учасник, перенавчання не відбувається. Забезпечити замовника якісним цифровим продуктом."
-    },
-    "fifthSlide": {
-      "title": "Наша цільова аудиторія",
-      "description": "Українці, які опановують спеціальності в сфері ІТ незалежно від віку і досвіду - трейні, джуніори, світчери, ментори з однієї сторони, і громади та спільноти України в сфері благодійності, волонтерства, громадських ініціатив з іншої."
-    }
-  },
   "moreProjects": "Більше проєктів",
+  "noProjects": "Вибачте! Проєктів немає.",
   "projects": {
     "projectStart": "Старт проєкту",
     "projectCycle": "Цикл проєкту",
     "duration": "Тривалість",
     "complexity": "Складність",
     "projectTeam": "Команда проєкту",
-    "list": {
-      "murrfecto": {
-        "title": "Сайт притулку для вуличних тварин Murrfecto",
-        "status": "Завершено",
-        "statusVal": "active",
-        "teamMembers": [
-          "Ольга Іванова",
-          "Сусанна Салата",
-          "Ірина Столярова",
-          "Світлана Макаренко (Батрак)",
-          "Іван Миронюк",
-          "Іван Миронюк",
-          "Марина Ковальова",
-          "Ольга Сидоренко",
-          "Тоня Сива",
-          "Євген Сердюк",
-          "Євген Сердюк",
-          "Ігор Дронішинець",
-          "Олена Новаченко",
-          "Леся Черних",
-          "Інна  Фоменко",
-          "Оксана Деркач",
-          "Ярина Березовська"
-        ]
-      },
-      "atakahelp": {
-        "title": "Платформа про види кібершахрайства AtakaHelp",
-        "status": "Завершено",
-        "statusVal": "active",
-        "teamMembers": [
-          "Ольга Іванова",
-          "Сусанна Салата",
-          "Еліна Трайберг",
-          "Дмитро Шленськовий",
-          "Вікторія Подстрел",
-          "Світлана Макаренко (Байрак)",
-          "Ірина Колесник",
-          "Анна Лисак",
-          "Віталій Вештобей",
-          "Марина Ковальова",
-          "Сергій Джулай",
-          "Єгор Тверитінов",
-          "Ольга Кійко",
-          "Ірина Зозуля",
-          "Олена Красножан",
-          "Мар’яна Гірська",
-          "Марина Лебідь",
-          "Ірина Лозова",
-          "Наталія Діденко",
-          "Ярина Березовська",
-          "Роман Малик",
-          "Юлія Возняківська",
-          "Тимофій Заліщук",
-          "Андрій Черкасов",
-          "Наталія Качан",
-          "Інна Фоменко",
-          "Костянтин Ольховик"
-        ]
-      },
-      "bazatrainee": {
-        "title": "Платформа для Baza Trainee Ukraine",
-        "status": "Завершено",
-        "statusVal": "active",
-        "teamMembers": [
-          "Ольга Іванова",
-          "Сусанна Салата",
-          "Ірина Столярова",
-          "Світлана Макаренко (Батрак)",
-          "Ігор Дронішинець",
-          "Михайло Фисюк",
-
-          "Олександр Нещадін",
-          "Діана Форостяна",
-          "Ігор Дронішинець",
-          "Анна Клиба",
-          "Олексій Бурис",
-          "Наталія Куксова",
-          "Ростислав Багнюк",
-          "Ярина Березовська",
-          "Кирило Матвієнко",
-          "Наталія Золотухіна",
-          "Катерина Рубанік",
-          "Євген Полєжаєв",
-          "Інна Ладика",
-          "Ольга Хавроненко",
-          "Вікторія Єфименко",
-          "Володимир Робота",
-          "Ірина Кореліна"
-        ]
-      },
-      "cheetosaurus": {
-        "title": "Читозаврик - веб-додаток з книжковими вікторинами для дітей",
-        "status": "В розробці",
-        "statusVal": "under-development",
-        "teamMembers": []
-      },
-      "1001-songs": {
-        "title": "1001 songs - сайт-колекція українських автентичних пісень ",
-        "status": "В розробці",
-        "statusVal": "under-development",
-        "teamMembers": []
-      },
-      "biglapa": {
-        "title": "Сайт притулку для вуличних тварин Big Lapa",
-        "status": "В розробці",
-        "statusVal": "under-development",
-        "teamMembers": []
-      },
-      "feeda": {
-        "title": "Feeda - платформа для обробки заявок на участь у Baza Trainee",
-        "status": "В розробці",
-        "statusVal": "under-development",
-        "teamMembers": []
-      },
-      "bookAbroad": {
-        "title": "Книжка їде за кордон - портал гуманітарної допомоги",
-        "status": "В розробці",
-        "statusVal": "under-development",
-        "teamMembers": []
-      },
-      "fundraisingLP": {
-        "title": "Лендинг - збір коштів для 59-бригади “Сталеві Обійми”",
-        "status": "Завершено",
-        "statusVal": "active",
-        "teamMembers": []
-      }
-    },
     "status": {
       "teamFormation": "Формування команди",
       "underDevelopment": "В розробці",
@@ -218,27 +70,7 @@
     "employed": "працевлаштовано"
   },
   "reviews": {
-    "title": "Відгуки",
-    "list": [
-      {
-        "name": "Олена",
-        "role": "учасниця, QA",
-        "date": "червень 2023",
-        "review": "“Я останні два тижні щодня думаю про те, що на Базу варто було прийти мінімум для того, щоб усвідомити значущість роботи дизайнера в розробці ПЗ”"
-      },
-      {
-        "name": "Віталій",
-        "role": "БФ",
-        "date": "травень 2023",
-        "review": "“Проєкт побудовано за принципом win-win, коли обидві сторони підсилюють один одного на користь спільноти. Чудова ідея!”"
-      },
-      {
-        "name": "Ірина",
-        "role": "учасниця, Front-end",
-        "date": "травень 2023",
-        "review": "“Під час першої зустрічі команди проєкту обговорили, аргументували і обрали мову програмування. Зручно, що не треба перевчатись, я практикую навички по React”"
-      }
-    ]
+    "title": "Відгуки"
   },
   "modal": {
     "title": "Оберіть суму, якою ВИ хочете підтримати Baza Trainee Ukraine",
