fix: changed from dynamic imports to common imports in 'dictionaries.ts'

--- a/src/locales/ua/main.json
+++ b/src/locales/ua/main.json
@@ -85,7 +85,7 @@
     "partners": "Партнери",
     "participate": "Взяти участь",
     "privacyPolicy": "Політика конфіденційності",
-    "rulesForUsingTheSite": "Правила корстування сайтом",
+    "rulesForUsingTheSite": "Правила користування сайтом",
     "statute": "Статут",
     "accountability": "Звітність",
     "allRightsReserved": "Розробка BazaTraineeUkraine 2023 Усі права захищені"
