--- a/src/locales/pl/main.json
+++ b/src/locales/pl/main.json
@@ -88,7 +88,7 @@
     "rulesForUsingTheSite": "Zasady korzystania z serwisu",
     "statute": "Statut",
     "accountability": "Odpowiedzialność",
-    "allRightsReserved": "BazaTraineeUkraine 2023 Wszelkie prawa zastrzeżone"
+    "allRightsReserved": "BazaTraineeUkraine 2023. © Wszelkie prawa zastrzeżone"
   },
   "notFound": {
     "title": "Ta strona nie została znaleziona.",
