--- a/src/locales/ua/main.json
+++ b/src/locales/ua/main.json
@@ -88,7 +88,7 @@
     "rulesForUsingTheSite": "Правила користування сайтом",
     "statute": "Статут",
     "accountability": "Звітність",
-    "allRightsReserved": "Розробка BazaTraineeUkraine 2023 Усі права захищені"
+    "allRightsReserved": "Розробка BazaTraineeUkraine 2023. © Усі права захищені"
   },
   "notFound": {
     "title": "Цю сторінку не знайдено",
