--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -7,32 +7,32 @@
   },
   "monthsNames": {
     "nouns": [
-      "january",
-      "february",
-      "march",
-      "april",
-      "may",
-      "june",
-      "july",
-      "august",
-      "september",
-      "october",
-      "november",
-      "december"
+      "January",
+      "February",
+      "March",
+      "April",
+      "May",
+      "June",
+      "July",
+      "August",
+      "September",
+      "October",
+      "November",
+      "December"
     ],
     "spelled": [
-      "january",
-      "february",
-      "march",
-      "april",
-      "may",
-      "june",
-      "july",
-      "august",
-      "september",
-      "october",
-      "november",
-      "december"
+      "January",
+      "February",
+      "March",
+      "April",
+      "May",
+      "June",
+      "July",
+      "August",
+      "September",
+      "October",
+      "November",
+      "December"
     ]
   },
   "moreProjects": "More projects",
@@ -85,7 +85,7 @@
     "partners": "Partners",
     "participate": "Participate",
     "privacyPolicy": "Privacy Policy",
-    "rulesForUsingTheSite": "Conditions of Use",
+    "rulesForUsingTheSite": "Terms of Use",
     "statute": "Statute",
     "accountability": "Report",
     "allRightsReserved": "Created by BazaTraineeUkraine 2023. © All rights reserved"
