--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -65,7 +65,7 @@
     "title": "Partners"
   },
   "stats": {
-    "completedProjects": "completed projects",
+    "completedProjects": "active projects",
     "involvedParticipants": "involved participants",
     "employed": "employed"
   },
