--- a/src/locales/pl/main.json
+++ b/src/locales/pl/main.json
@@ -65,7 +65,7 @@
     "title": "Partnerzy"
   },
   "stats": {
-    "completedProjects": "Ukończone projekty",
+    "completedProjects": "aktywne projekty",
     "involvedParticipants": "Uczestnicy",
     "employed": "Osoby zatrudnione "
   },
