--- a/src/locales/ua/main.json
+++ b/src/locales/ua/main.json
@@ -65,7 +65,7 @@
     "title": "Партнери"
   },
   "stats": {
-    "completedProjects": "виконаних проєктів",
+    "completedProjects": "активних проєктів",
     "involvedParticipants": "залучених учасників",
     "employed": "працевлаштовано"
   },
